--- a/src/guibuilder.form
+++ b/src/guibuilder.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="guitest">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="17" y="20" width="814" height="434"/>
@@ -10,7 +10,7 @@
     <children>
       <component id="72b98" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="7" vsize-policy="6" hsize-policy="6" anchor="9" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="9" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="400" height="200"/>
             <preferred-size width="800" height="400"/>
           </grid>
@@ -20,57 +20,33 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="424b2" class="javax.swing.JButton" binding="arkivButton" default-binding="true">
+      <component id="424b2" class="javax.swing.JButton" binding="öppnaButton" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Arkiv"/>
+          <text value="Öppna"/>
         </properties>
       </component>
-      <component id="3fdc1" class="javax.swing.JButton" binding="formatButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Format"/>
-        </properties>
-      </component>
-      <component id="f9dff" class="javax.swing.JButton" binding="redigeraButton" default-binding="true">
+      <component id="3fdc1" class="javax.swing.JButton" binding="sparaButton" default-binding="true">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Redigera"/>
-        </properties>
-      </component>
-      <component id="7a5b7" class="javax.swing.JButton" binding="visaButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Visa"/>
-        </properties>
-      </component>
-      <component id="be383" class="javax.swing.JButton" binding="hjälpButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Hjälp"/>
+          <text value="Spara"/>
         </properties>
       </component>
       <hspacer id="152b3">
         <constraints>
-          <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="324db" class="javax.swing.JButton" binding="button1">
+      <component id="f9dff" class="javax.swing.JButton" binding="nyttButton" default-binding="true">
         <constraints>
-          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Clear"/>
+          <text value="Nytt"/>
         </properties>
       </component>
     </children>
